Remove rooms column, and adds welcome overlay.

--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -8,3 +8,30 @@ h1, h2, h3, h4, h5, h6
 
 h2
   font-size               : 2.5em
+
+
+.overlay
+  position                : fixed
+  top                     : 0
+  bottom                  : 0
+  left                    : 0
+  right                   : 0
+  padding                 : 100px
+  background              : rgba(0,0,0,0.8)
+  text-align              : center
+
+.message
+  margin                  : 0 auto
+  padding                 : 50px
+  width                   : 300px
+  background              : #ffffff
+  text-align              : left
+
+  form
+    margin                : 4em 0 0
+
+    input[type=text]
+      width               : 238px
+
+    .files
+      display             : none
