Adds login controller.

--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -16,12 +16,13 @@ h2
   bottom                  : 0
   left                    : 0
   right                   : 0
-  padding                 : 100px
   background              : rgba(0,0,0,0.8)
   text-align              : center
 
 .message
-  margin                  : 0 auto
+  position                : relative
+  top                     : -50%
+  margin                  : 200px auto
   padding                 : 50px
   width                   : 300px
   background              : #ffffff
@@ -32,6 +33,3 @@ h2
 
     input[type=text]
       width               : 238px
-
-    .files
-      display             : none
