--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -9,13 +9,57 @@ h1, h2, h3, h4, h5, h6
 h2
   font-size               : 2.5em
 
-
+.interface,
 .overlay
   position                : fixed
   top                     : 0
   bottom                  : 0
   left                    : 0
   right                   : 0
+
+.users,
+.chat,
+.transfers
+  position                : absolute
+
+.users
+  top                     : 0
+  bottom                  : 200px
+  left                    : 0
+  width                   : 200px
+
+.chat
+  top                     : 0
+  bottom                  : 200px
+  left                    : 200px
+  right                   : 0
+
+  .chat-holder
+    position              : relative
+    width                 : 100%
+    height                : 100%
+
+    .chat-content
+      position            : absolute
+      top                 : 0
+      left                : 0
+      right               : 0
+      bottom              : 40px
+
+    .chat-bar
+      position            : absolute
+      left                : 0
+      right               : 0
+      bottom              : 0
+      height              : 40px
+
+.transfers
+  left                    : 0
+  right                   : 0
+  bottom                  : 0
+  height                  : 200px
+
+.overlay
   background              : rgba(0,0,0,0.8)
   text-align              : center
 
