--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,48 +1,52 @@
-<!--<div class="row-fluid">-->
-  <!--<h2>Player</h2>-->
-<!--</div>-->
-<div class="row-fluid">
-    <!-- <div class="span2">
-      <table class="table">
-        <thead><h2>Rooms</h2></thead>
-        <tbody>
-          <tr>
-            <td>Techno</td>
-          </tr>
-          <tr>
-            <td>Jazz</td>
-          </tr>
-        </tbody>
-      </table>
-    </div> -->
-    <div class="span3">
-      <table class="table" ng-controller="PeersCtrl">
-        <thead><h2>Users</h2></thead>
-        <tbody>
-          <tr ng-repeat="peer in peers">
-            <td><a ng-click="showFileList()">{{peer}}</a></td>
-          </tr>
-        </tbody>
-      </table>
+<div class="interface">
+  <div class="users">
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="span12">
+          <h2>Users</h2>
+          <table class="table" ng-controller="PeersCtrl">
+            <tbody>
+              <tr ng-repeat="peer in peers">
+                <td><a ng-click="showFileList()">{{peer}}</a></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
     </div>
-    <div class="span9">
-      <table class="table" ng-controller="ChatCtrl">
-        <thead><h2>Chat</h2></thead>
-        <tbody>
-          <tr ng-repeat="msg in msgs">
-            <td>{{msg.user}}: {{msg.msg}}
-            </td>
-          </tr>
-        </tbody>
-      </table>
-      <input type="text" class="span12" placeholder="No serious shit please!">
+  </div>
+  <div class="chat">
+    <div class="chat-holder">
+      <div class="container-fluid chat-content">
+        <div class="row-fluid">
+          <div class="span12">
+            <h2>Chat</h2>
+            <table class="table" ng-controller="ChatCtrl">
+              <tbody>
+                <tr ng-repeat="msg in msgs">
+                  <td>{{msg.user}}: {{msg.msg}}
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-fluid chat-bar">
+        <div class="row-fluid">
+          <div class="span12">
+            <input type="text" class="span12" placeholder="No serious shit please!">
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
 
 <div class="overlay" ng-controller="LoginCtrl" ng-hide="initialized">
   <div class="message row-fluid">
-    <h1>Welcome.</h2>
+    <h1>Welcome.</h1>
     <form ng-submit="setUsername()" ng-hide="showFiles">
       <div class="username">
         <label for="username">What's your nickname?</label>
