--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -19,6 +19,7 @@ h2
 
 .users,
 .chat,
+.player,
 .transfers
   position                : absolute
 
@@ -26,7 +27,8 @@ h2
   top                     : 0
   bottom                  : 200px
   left                    : 0
-  width                   : 200px
+  width                   : 199px
+  border-right            : 1px solid #f0f0f0
 
 .chat
   top                     : 0
@@ -44,20 +46,29 @@ h2
       top                 : 0
       left                : 0
       right               : 0
-      bottom              : 40px
+      bottom              : 45px
 
     .chat-bar
       position            : absolute
       left                : 0
       right               : 0
       bottom              : 0
-      height              : 40px
+      height              : 45px
+
+.player
+  bottom                  : 0
+  left                    : 0
+  width                   : 199px
+  height                  : 199px
+  border-top              : 1px solid #f0f0f0
+  border-right            : 1px solid #f0f0f0
 
 .transfers
-  left                    : 0
+  left                    : 200px
   right                   : 0
   bottom                  : 0
-  height                  : 200px
+  height                  : 199px
+  border-top              : 1px solid #f0f0f0
 
 .overlay
   background              : rgba(0,0,0,0.8)
