--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,8 +1,8 @@
-<div class="interface" ng-controller="PeersCtrl">
+<div class="interface">
   <div class="users">
     <div class="container-fluid">
       <div class="row-fluid">
-        <div class="span12">
+        <div class="span12" ng-controller="PeersCtrl">
           <h2>Users</h2>
           <table class="table">
             <tbody>
