--- a/app/views/main.html
+++ b/app/views/main.html
@@ -77,7 +77,7 @@
 </div>
 
 <div class="windows">
-  <div class="file-browser" ng-controller="FileBrowserCtrl" ng-show="showFiles">
+  <div class="file-browser" ng-controller="FileBrowserCtrl" ng-show="showFileBrowser">
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span12">
