Fixes the scrolling bug in the chat content.

--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -41,6 +41,7 @@ h2
     border-right-width    : 1px
 
   .chat
+    overflow              : hidden
     top                   : 0
     bottom                : 200px
     left                  : 200px
@@ -52,6 +53,7 @@ h2
       height              : 100%
 
       .chat-content
+        overflow          : scroll
         position          : absolute
         top               : 0
         left              : 0
