--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -109,8 +109,9 @@ h2
   margin                  : 200px auto
   padding                 : 50px
   width                   : 300px
-  background              : #ffffff
+  background              : #ffffff url(/images/bird.png) 60px -230px
   text-align              : left
+  box-shadow              : 0 0 25px rgba(0,0,0,0.2)
 
   form
     margin                : 4em 0 0
