custom usernames now work

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -37,7 +37,7 @@
         <div class="row-fluid">
           <div class="span12">
             <form ng-submit='sendMessage()'>
-            <input type="text" class="span12" ng-model='message' placeholder="No serious shit please!">
+            <input type="text" class="span12" ng-model='message' placeholder="This is my message!">
             <input type='submit' value='Send'>
             </form>
           </div>
