--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -5,8 +5,10 @@ body
   position                : relative
   margin                  : 0
   padding                 : 0
+  overflow                : hidden
 
 h1, h2, h3, h4, h5, h6
+  display                 : block
   font-family             : "Maven Pro"
   font-weight             : 200
   font-size               : 4em
@@ -22,6 +24,14 @@ h2
   bottom                  : 0
   left                    : 0
   right                   : 0
+
+  h2
+    margin                : 10px 0 0 0
+    padding               : 0 0 10px
+    border-bottom         : 1px solid #dddddd
+
+  table tr:first-of-type td
+    border                : 0
 
   .users,
   .chat,
@@ -52,20 +62,28 @@ h2
       width               : 100%
       height              : 100%
 
-      .chat-content
+      .chat-title
         overflow          : scroll
         position          : absolute
         top               : 0
         left              : 0
         right             : 0
-        bottom            : 45px
+        height            : 61px
+
+      .chat-content
+        overflow          : scroll
+        position          : absolute
+        top               : 61px
+        left              : 0
+        right             : 0
+        bottom            : 60px
 
       .chat-bar
         position          : absolute
         left              : 0
         right             : 0
         bottom            : 0
-        height            : 45px
+        height            : 50px
 
         input[type='submit']
           display         : none
@@ -109,7 +127,7 @@ h2
   margin                  : 200px auto
   padding                 : 50px
   width                   : 300px
-  background              : #ffffff url(/images/bird.png) 60px -230px
+  background              : #ffffff url(/images/bird.png) 80px -270px
   text-align              : left
   box-shadow              : 0 0 25px rgba(0,0,0,0.2)
 
