--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -39,9 +39,30 @@ h2
   .transfers,
   .file-browser
     position              : absolute
-    overflow              : scroll
+    overflow              : hidden
     background            : #ffffff
     border                : 0px solid #f0f0f0
+
+  .holder
+    position              : relative
+    width                 : 100%
+    height                : 100%
+
+    .title
+      overflow            : hidden
+      position            : absolute
+      top                 : 0
+      left                : 0
+      right               : 0
+      height              : 61px
+
+    .content
+      overflow            : scroll
+      position            : absolute
+      top                 : 61px
+      left                : 0
+      right               : 0
+      bottom              : 0
 
   .users
     top                   : 0
@@ -51,42 +72,27 @@ h2
     border-right-width    : 1px
 
   .chat
-    overflow              : hidden
     top                   : 0
     bottom                : 200px
     left                  : 200px
     right                 : 0
 
-    .chat-holder
-      position            : relative
-      width               : 100%
-      height              : 100%
+    .content
+      bottom              : 60px
 
-      .chat-title
-        overflow          : scroll
-        position          : absolute
-        top               : 0
-        left              : 0
-        right             : 0
-        height            : 61px
+      table
+        margin            : 0
 
-      .chat-content
-        overflow          : scroll
-        position          : absolute
-        top               : 61px
-        left              : 0
-        right             : 0
-        bottom            : 60px
+    .bar
+      overflow            : hidden
+      position            : absolute
+      left                : 0
+      right               : 0
+      bottom              : 0
+      height              : 50px
 
-      .chat-bar
-        position          : absolute
-        left              : 0
-        right             : 0
-        bottom            : 0
-        height            : 50px
-
-        input[type='submit']
-          display         : none
+      input[type='submit']
+        display           : none
 
   .player
     bottom                : 0
