--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -142,3 +142,15 @@ h2
 
     input[type=text]
       width               : 238px
+
+
+div[file-drop]
+  height                  : 200px
+  background              : #f0f0f0
+  border                  : 1px solid #e0e0e0
+  border-radius           : 5px
+
+div[file-drop].dragenter
+  background              : #f0e0f0
+  border                  : 1px solid #e0a0e0
+  border-radius           : 5px
