--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -101,6 +101,25 @@ h2
     height                : 199px
     border-top-width      : 1px
     border-right-width    : 1px
+    box-shadow            : INSET 0 0 100px rgb(0,0,0)
+    background-size       : cover
+    color                 : #ffffff
+    font-size             : 4em
+    line-height           : 199px
+    text-align            : center
+    vertical-align        : middle
+
+    span
+      display             : inline-block
+      width               : 100px
+      height              : 100px
+      line-height         : 100px
+      border-radius       : 100px
+      background          : rgba(0,0,0,0.8)
+
+      i
+        position          : relative
+        left              : 5px
 
   .transfers
     left                  : 200px
