--- a/app/views/main.html
+++ b/app/views/main.html
@@ -65,8 +65,7 @@
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span12">
-          <h2>Player</h2>
-          <span><i class="icon-play icon-4x"></i></span>
+          <span><i class="icon-play"></i></span>
         </div>
       </div>
     </div>
