--- a/app/views/main.html
+++ b/app/views/main.html
@@ -61,7 +61,7 @@
     </div>
   </div>
 
-  <div class="player">
+  <div class="player" ng-controller="PlayerCtrl">
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span12">
