Improves player design.

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -65,7 +65,11 @@
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span12">
-          <span><i class="icon-play"></i></span>
+          <span class="ring">
+            <span class="button">
+              <i class="icon-play"></i>
+            </span>
+          </span>
         </div>
       </div>
     </div>
