drag and drop support

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -145,10 +145,7 @@
     </form>
     <form ng-show="showFiles">
       <div class="files">
-        <label for="inputFiles">Files Please!</label>
-        <div class="span12" file-drop></div>
-
-        <input type="file" id="inputFiles" class="span12" accept="audio/*" multiple onchange="angular.element(this).scope().setFiles(this)">
+        <h2>Drag some files on this window</h2>
       </div>
     </form>
   </div>
