--- a/app/views/main.html
+++ b/app/views/main.html
@@ -133,7 +133,7 @@
 <div class="overlay" ng-controller="LoginCtrl" ng-hide="initialized">
   <div class="message row-fluid">
     <h1><img src="/images/logo.png"> SoulWeb</h1>
-    <form ng-submit="setUsername()" ng-hide="showFiles">
+    <form ng-submit="setUsername()" ng-hide="usernameSet">
       <div class="username">
         <label for="username">What's your nickname?</label>
         <span class="input-append">
@@ -142,7 +142,7 @@
         </span>
       </div>
     </form>
-    <form ng-show="showFiles">
+    <form ng-show="usernameSet">
       <div class="files">
         <h2>Drag some files on this window</h2>
       </div>
