--- a/app/views/main.html
+++ b/app/views/main.html
@@ -144,7 +144,8 @@
     </form>
     <form ng-show="usernameSet">
       <div class="files">
-        <h2>Drag some files on this window</h2>
+        <i class="icon-copy icon-4x"></i>
+        <p>Drag some files on this window</p>
       </div>
     </form>
   </div>
