Adds scrollBottom directive and removes some logging.

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -33,7 +33,7 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid content">
+      <div class="container-fluid content" scroll-bottom>
         <div class="row-fluid">
           <div class="span12">
             <table class="table">
