Adds play states to player.

--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -130,7 +130,7 @@ h2
       &:hover
         opacity           : 0.8
 
-      i
+      i.icon-play
         position          : relative
         left              : 4px
 
