--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,4 @@
-<div class="interface">
+<div class="interface" ng-controller="interface" ng-click="broadcastClick()">
   <div class="users" ng-controller="PeersCtrl">
     <div class="holder">
       <div class="container-fluid title">
