Final name, SoulSeek.js.

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -141,7 +141,7 @@
 
 <div class="overlay" ng-controller="LoginCtrl" ng-hide="initialized">
   <div class="message row-fluid">
-    <h1><img src="/images/logo.png"> SoulWeb</h1>
+    <h1><img src="/images/logo.png"> SoulSeek.js</h1>
     <form ng-submit="setUsername()" ng-hide="usernameSet">
       <div class="username">
         <label for="username">What's your nickname?</label>
