Switches to relative images for hosting on gh-pages.

--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -103,7 +103,7 @@ h2
     border-right-width    : 1px
     box-shadow            : INSET 0 0 100px rgba(0,0,0,0.5)
     background-size       : cover
-    background-image      : url(/images/cover.jpg)
+    background-image      : url(../images/cover.jpg)
     color                 : #000000
     font-size             : 3em
     line-height           : 199px
@@ -165,7 +165,7 @@ h2
   margin                  : 200px auto
   padding                 : 50px
   width                   : 300px
-  background              : #ffffff url(/images/bird.png) 80px -270px
+  background              : #ffffff url(../images/bird.png) 80px -270px
   text-align              : left
   box-shadow              : 0 0 25px rgba(0,0,0,0.2)
 
